--- a/templates/base_cal2.html
+++ b/templates/base_cal2.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-    <div class="span3">{% block left %}{% endblock %}</div>
-    <div class="span9">
+    <div class="span2">{% block left %}{% endblock %}</div>
+    <div class="span10">
         {% if success %}
             <div class="alert alert-success"><span>{{ success }}</span><a class="close" data-dismiss="alert" href="#">&times;</a></div>
         {% endif %}
@@ -14,6 +14,7 @@
                 <div class="alert alert-danger"><span>{{ err }}</span><a class="close" data-dismiss="alert" href="#">&times;</a></div>
             {% endfor %}
         {% endif %}
+        <div id="alert_bar"></div>
         {% block main %}{% endblock %}
     </div>
 </div>
