--- a/templates/mid_base.html
+++ b/templates/mid_base.html
@@ -3,6 +3,7 @@
     <div class="row">
         <div class="span2"></div>
         <div class="span8">
+            <div id="alert_bar"></div>
             {% block mid %}{% endblock %}
         </div>
         <div class="span2"></div>
