--- a/templates/order.html
+++ b/templates/order.html
@@ -1,9 +1,11 @@
 {% extends "mid_base.html" %}
 {% block mid %}
     <div class="page-header">
-        <h1>订单详情<small></small></h1>
+        <h1>订单详情<small>&lt;&lt;<a href="{{ url_for("product.order_list") }}">返回订单列表</a></small></h1>
     </div>
+    {% if order.status < 1 %}
     <div class="pull-right"><button class="btn btn-primary">取消订单</button></div>
+    {% endif %}
     <blockquote>
         <p>订单属性</p>
         <small>订单基本属性</small>
@@ -13,18 +15,18 @@
         <tr>
             <td>生成时间</td>
             <td>订单号</td>
-            <td>折扣金额</td>
             <td>合计金额</td>
+            <td>优惠合计金额</td>
             <td>状态</td>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td>2012年10月1日22时22分</td>
-            <td><strong>AP002313</strong></td>
-            <td>3000$</td>
-            <td>3000$</td>
-            <td>正在处理</td>
+            <td>{{ order.create_time }}</td>
+            <td><strong>{{ order.serial_number }}</strong></td>
+            <td>{{ order.total_fee }} ¥</td>
+            <td>{{ order.favor_fee }} ¥</td>
+            <td>{{ order.status | order_status }}</td>
         </tr>
         </tbody>
     </table>
@@ -36,27 +38,26 @@
         <thead>
         <tr>
             <td>主机名称</td>
-            <td>操作系统</td>
             <td>CPU</td>
             <td>内存</td>
             <td>存储</td>
+            <td></td>
+            <td>租期</td>
+            <td>价格</td>
         </tr>
         </thead>
         <tbody>
+        {% for orderproduct in orderproducts %}
         <tr>
-            <td>经济A型</td>
-            <td>CentOS6.2</td>
-            <td>1核</td>
-            <td>512M</td>
-            <td>10G</td>
+            <td>{{ orderproduct.product.name }}</td>
+            <td>{{ orderproduct.product.cpu }}核</td>
+            <td>{{ orderproduct.product.memory | mems }}</td>
+            <td>{{ orderproduct.product.storage }}</td>
+            <td>{{ orderproduct.pay_timelimit }}</td>
+            <td>{{ orderproduct.pay_type | pay_type }}</td>
+            <td>{{ orderproduct.favor_fee }}¥</td>
         </tr>
-        <tr>
-            <td>经济B型</td>
-            <td>CentOS6.2</td>
-            <td>1核</td>
-            <td>512M</td>
-            <td>10G</td>
-        </tr>
+        {% endfor %}
         </tbody>
     </table>
 {% endblock %}
