--- a/templates/regist.html
+++ b/templates/regist.html
@@ -1,4 +1,15 @@
 {% extends "mid_base.html"%}
+{% block header %}
+    <script type="text/javascript">
+    $(function(){
+       $("#change_reg").click(function(){
+           var r = parseInt(Math.random()*(9999-1000+1)+1000);
+           var url = "{{ url_for("index.reg_code") }}?v="+r
+           $("#reg_code").attr("src",url);
+       });
+    });
+    </script>
+{% endblock %}
 {% block mid %}
     {% if errors %}
         {% for err in errors %}
@@ -30,7 +41,7 @@
         <div class="control-group">
             <label class="control-label" for="code">验证码</label>
             <div class="controls">
-                <input type="text" id="code" class="span1" name="code" placeholder="验证码">
+                <input type="text" id="code" class="span1" name="code" placeholder="验证码"><a id="change_reg" href="javascript:void(0);"><img id="reg_code" src="{{ url_for('index.reg_code') }}"/>点击更换</a>
             </div>
         </div>
         <div class="control-group">
