--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -75,7 +75,7 @@
                     </div>
                 {% else %}
                     <a href="{{ url_for("index.show_create_server",user_product_id=product.id) }}"  class="btn-primary" type="button">创建实例</a>
-                {% endfor %}
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
