--- a/templates/creator.html
+++ b/templates/creator.html
@@ -2,6 +2,10 @@
 {% block header %}
     <script type="text/javascript">
     function create(btn){
+        if($("#instance_name").val()==""){
+            pop_alert('err',"请填写实例名称");
+            return;
+        }
         if ($("#images").val()==""){
             pop_alert('err',"请选择一个操作系统");
             return ;
