--- a/templates/vnc.html
+++ b/templates/vnc.html
@@ -29,10 +29,10 @@
     </tr>
     </tbody>
 </table>
-<div class="well">
-<div class="pull-right"><button id="open_btn" class="btn btn-primary">打开VNC</button> </div>
+<div>
+<div class="well pull-right"><button id="open_btn" class="btn btn-primary">打开VNC</button> </div>
 <div id="vnc_holder" style="display: none;">
-    <iframe id="vnc_window" width="500" height="300" src=""></iframe>
+    <iframe id="vnc_window" width="700" height="400" src=""></iframe>
 </div>
 </div>
 {% endblock %}
